- Implement passive-interface for RIP
- Implement cost <interface> <1-16> for RIP (eq to offset-list on CISCO routers)
- Integrate OpenBSD ripd to solution with modifications
-- It's possible to manage update, fail and dead timers.
-- Adapt default timers to CISCO standard

Alpha 0.21
- Implement OSPF routing
-- Implement redistribute static, default, connected with metric and metric-type values
- Dispatch saveRipd into macro WRITE_RIPD, to restart ripd ONLY if router rip command have succeed, not all commands
- Use the correct ripd process ! not /usr/sbin/ripd but /opt/bin/ripd

Alpha 0.22
- Change name for all cmd/command_*.c,h files to cmd/*.c,h
- Move all router ospf commands to new created conf_router_ospf.x
- OSPF improvements
-- Implement passive-interface
-- Implement ip ospf cost <1-65535> on interface
- RIP improvements
-- Implement ip rip cost <1-16> on interface -> remove cost <iface> <1-6> from router rip prompt
-- Bugfix when generate configuration (timers)

Alpha 0.23
- OpenBSD ripd is now fully manageable with BSDRouterd
-- Implement ip rip authentication mode none,text,md5 for each interface
-- Implement ip rip authentication key-string for each interface

Alpha 0.24
- Change show ip route to a CISCO intepretation
- Reload ospfd & ripd only when daemon is started
- Implement network <iface> for RIP to use ripd on an interface. passive-interface is used to save configuration, but don't use rip.
- Create command cutString to cut a string when a space, \n or \t occurs. Dynamicly manage the memory
- Create string_mgmt to manage strings (cutting, regexp...)
- Create new function helper for is_valid_ip and is_valid_ip_cidr
- Create new function helper for is_numeric
- stability fixes
- OSPF:
-- Implement router-id A.B.C.D
-- Implement timers spf <delay> <hold>
-- Implement ip ospf hello-interval
-- Implement ip ospf dead-interval
-- Implement ip ospf transmit-delay
-- Implement ip ospf retransmit-interval
-- Implement ip ospf priority