@@ -1,4 +1,4 @@
-# Makefile.in generated by automake 1.11.2 from Makefile.am.
+# Makefile.in generated by automake 1.11.3 from Makefile.am.
 # OpenBSD50-mods/ripd/Makefile.  Generated from Makefile.in by configure.
 
 # Copyright (C) 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
@@ -69,7 +69,7 @@ ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = ${SHELL} /home/nerzhul/Desktop/dev/PFShell/missing --run aclocal-1.11
-AMTAR = ${SHELL} /home/nerzhul/Desktop/dev/PFShell/missing --run tar
+AMTAR = $${TAR-tar}
 AUTOCONF = ${SHELL} /home/nerzhul/Desktop/dev/PFShell/missing --run autoconf
 AUTOHEADER = ${SHELL} /home/nerzhul/Desktop/dev/PFShell/missing --run autoheader
 AUTOMAKE = ${SHELL} /home/nerzhul/Desktop/dev/PFShell/missing --run automake-1.11
@@ -80,7 +80,7 @@ CFLAGS = -g -O2
 CPP = gcc -E
 CPPFLAGS = 
 CYGPATH_W = echo
-DEFS = -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STDIO_H=1
+DEFS = -DPACKAGE=\"pfshell\" -DVERSION=\"alpha\ 0.24\" -DSTDC_HEADERS=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_SYS_STAT_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STRING_H=1 -DHAVE_MEMORY_H=1 -DHAVE_STRINGS_H=1 -DHAVE_INTTYPES_H=1 -DHAVE_STDINT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_STDLIB_H=1 -DHAVE_STDIO_H=1
 DEPDIR = .deps
 ECHO_C = 
 ECHO_N = -n
@@ -88,7 +88,7 @@ ECHO_T =
 EGREP = /bin/grep -E
 EXEEXT = 
 GREP = /bin/grep
-INSTALL = /usr/bin/install -c
+INSTALL = ../.././install-sh -c
 INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
@@ -103,15 +103,15 @@ OBJEXT = o
 PACKAGE = pfshell
 PACKAGE_BUGREPORT = loic.blot@frostsapphirestudios.com
 PACKAGE_NAME = PFShell
-PACKAGE_STRING = PFShell alpha 0.23
+PACKAGE_STRING = PFShell alpha 0.24
 PACKAGE_TARNAME = pfshell
 PACKAGE_URL = 
-PACKAGE_VERSION = alpha 0.23
+PACKAGE_VERSION = alpha 0.24
 PATH_SEPARATOR = :
 SET_MAKE = 
 SHELL = /bin/bash
 STRIP = 
-VERSION = alpha 0.23
+VERSION = alpha 0.24
 YACC = yacc
 YFLAGS = 
 abs_builddir = /home/nerzhul/Desktop/dev/PFShell/OpenBSD50-mods/ripd
@@ -122,8 +122,8 @@ ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
 am__quote = 
-am__tar = ${AMTAR} chof - "$$tardir"
-am__untar = ${AMTAR} xf -
+am__tar = $${TAR-tar} chof - "$$tardir"
+am__untar = $${TAR-tar} xf -
 bindir = ${exec_prefix}/bin
 build_alias = 
 builddir = .
@@ -236,7 +236,7 @@ uninstall-binPROGRAMS:
 
 clean-binPROGRAMS:
 	-test -z "$(bin_PROGRAMS)" || rm -f $(bin_PROGRAMS)
-ripd$(EXEEXT): $(ripd_OBJECTS) $(ripd_DEPENDENCIES) 
+ripd$(EXEEXT): $(ripd_OBJECTS) $(ripd_DEPENDENCIES) $(EXTRA_ripd_DEPENDENCIES) 
 	@rm -f ripd$(EXEEXT)
 	$(ripd_LINK) $(ripd_OBJECTS) $(ripd_LDADD) $(LIBS)
 
